tests/baselines/reference/noCrashOnParameterNamedRequire.errors.txt
index.js(2,25): error TS2307: Cannot find module './mod' or its corresponding type declarations.


==== index.js (1 errors) ====
    (function(require, module, exports){
        const mod = require("./mod");
                            ~~~~~~~
!!! error TS2307: Cannot find module './mod' or its corresponding type declarations.
        mod.foo;
    })(null, null, null);